--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "express": "^4.18.2"
   },
   "scripts": {
-    "start": "node src/App.js",
-    "install": "npm run install"
+    "start": "node src/App.js"
   },
   "eslintConfig": {
     "extends": "react-app"
